--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,16 @@ body {
     padding: 10px;
 
 }
+
+.carousel{
+    background: #512DA8;
+}
+.carousel-item {
+    height: 300px;
+}
+.carousel-item img {
+    position:absolut;
+    top: 0;
+    left: 0;    
+    min-height: 300px;
+}
